authn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authn-service
  labels:
    app: authn-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authn-service
  template:
    metadata:
      labels:
        app: authn-service
    spec:
      containers:
      - name: authn-service
        image: test-ingress:0.2
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: authn-service
spec:
  selector:
    app: authn-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
